<resources>
    <string name="app_name">My Cart</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="shopping_cart">Cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="dollar">$</string>
    <string name="vnd">₫</string>
    <string name="product_image">Thumbnail</string>
    <string name="_0">0</string>
    <string name="added_toast">Item added to cart</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="increase_item_quantity">Increase item quantity</string>
    <string name="decrease_item_quantity">Decrease item quantity</string>
    <string name="my_cart">My cart</string>
    <string name="cart_logo">Cart logo</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="sum_price">Sum price</string>
</resources>