<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@+id/increase"
            app:layout_constraintLeft_toRightOf="@id/thumbnail"
            app:layout_constraintStart_toEndOf="@+id/thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_0"
            android:textColor="@color/red500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/name"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/sumPrice"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/red500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/green500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/increase"
            app:layout_constraintLeft_toLeftOf="@id/increase"
            app:layout_constraintRight_toRightOf="@id/increase"
            app:layout_constraintStart_toStartOf="@+id/increase"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/increase"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/increase_item_quantity"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toTopOf="@+id/quantity"
            app:layout_constraintEnd_toStartOf="@+id/sumPrice"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/decrease"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/decrease_item_quantity"
            android:src="@drawable/baseline_remove_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/increase"
            app:layout_constraintLeft_toLeftOf="@id/quantity"
            app:layout_constraintRight_toRightOf="@id/quantity"
            app:layout_constraintStart_toStartOf="@+id/increase"
            app:layout_constraintTop_toBottomOf="@+id/quantity"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,VisualLintBounds" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>